<resources>
    <string name="app_name">Women Safety</string>
    <string name="here_i_am_app">Here I am - App</string>
    <string name="she_is_a_woman_a_mother_a_daughter_a_wife_n_and_a_sister_it_s_our_firm_duty_to_protect_women_of_our_society">She is a Woman, a Mother, a Daughter, a Wife\n and a Sister. It\'s our firm duty to protect women\n of our society</string>
    <string name="hence_we_have_developed_this_app_to_send_alert_to_our_loved_ones_in_case_of_emergency_harassment_etc">Hence we have developed this app to send alert\n to our loved ones in case of emergency,\n harassment etc.</string>
    <string name="next">Next</string>
    <string name="phone_number">Phone Number</string>
    <string name="_6">0</string>
    <string name="_10">/10</string>
    <string name="we_will_send_you_one_time_password_on_this_mobile_number">We will send you One Time Password on this mobile number</string>
    <string name="login">Login</string>
    <string name="add_contacts_to_be_informed">Add Contacts to be informed</string>
    <string name="tap_a_contact_to_remove">Tap a Contact to Remove</string>
    <string name="phonebook">PhoneBook</string>
    <string name="sent_alert">Sent Alert</string>
    <string name="notification_message">This app can always access your location</string>
    <string name="app_has">Here I am - App has been using your location</string>
    <string name="enter_the_otp_sent_on_9767857572">Enter the OTP sent on 9767857572</string>

</resources>