<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:clickable="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/ivLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/intro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/cvLogin"
        app:layout_constraintTop_toBottomOf="@id/ivLogin"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="18dp"
        app:cardBackgroundColor="@color/background"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        app:cardCornerRadius="35dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"
            >
            <ImageView
                app:layout_constraintBottom_toBottomOf="@id/etPhone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:id="@+id/ivPhone"
                android:src="@drawable/ic_baseline_call_24"/>
            <EditText
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:id="@+id/etPhone"
                android:background="@null"
                android:inputType="phone"
                android:maxLength="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivPhone"
                android:layout_marginStart="15dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/regular"
                android:hint="@string/phone_number"
                android:textColorHint="@color/white"
                android:padding="8dp"
                android:layout_marginEnd="20dp"
                android:textCursorDrawable="@null"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cl"
        app:layout_constraintTop_toBottomOf="@id/cvLogin"
        app:layout_constraintEnd_toEndOf="@id/cvLogin"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        >
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvCount"
            android:text="@string/_6"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:fontFamily="@font/light"
            app:layout_constraintStart_toEndOf="@id/tvCount"
            android:layout_marginStart="2dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cl"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="22dp"
        android:id="@+id/clInfo"
        >
        <ImageView
            app:layout_constraintBottom_toBottomOf="@id/tvInfo"
            android:id="@+id/ivInfo"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:src="@drawable/info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/ivInfo"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:fontFamily="@font/light"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/we_will_send_you_one_time_password_on_this_mobile_number"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="65dp"
        app:layout_constraintTop_toBottomOf="@id/clInfo"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="17sp"
        android:fontFamily="@font/light"
        android:backgroundTint="@color/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        app:cornerRadius="35dp"
        android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>