<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/clHome"
        >

    <ImageView
        android:id="@+id/ivHome"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/intro"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contacts_to_be_informed"
        android:textColor="@color/white"
        android:fontFamily="@font/light"
        android:textSize="17sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivHome"
        android:layout_marginTop="18dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvAdd"
        android:id="@+id/rvHome"
        tools:itemCount="2"
        tools:listitem="@layout/item_view_home_contacts"
        android:layout_marginTop="25dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginHorizontal="50dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clRemove"
        app:layout_constraintTop_toBottomOf="@id/rvHome"
        app:layout_constraintStart_toStartOf="@id/tvAdd"
        app:layout_constraintEnd_toEndOf="@id/tvAdd"
        android:layout_marginTop="20dp"
        >
        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:id="@+id/ivRemove"
            android:src="@drawable/ic_baseline_delete_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_a_contact_to_remove"
            android:textColor="@color/remove"
            android:textSize="16sp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@id/ivRemove"
            android:fontFamily="@font/light"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:id="@+id/cvPhoneBook"
        app:cardBackgroundColor="@color/login"
        app:layout_constraintTop_toBottomOf="@id/clRemove"
        app:layout_constraintStart_toStartOf="@id/tvAdd"
        app:layout_constraintEnd_toEndOf="@id/tvAdd"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="25dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/ivContacts"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/ic_baseline_contacts_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="parent"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phonebook"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/light"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivContacts"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:id="@+id/cvSentAlerts"
        app:cardBackgroundColor="@color/login"
        app:layout_constraintTop_toBottomOf="@id/cvPhoneBook"
        app:layout_constraintStart_toStartOf="@id/tvAdd"
        app:layout_constraintEnd_toEndOf="@id/tvAdd"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="25dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/ivCaution"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:src="@drawable/caution"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="parent"/>
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sent_alert"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/light"
                android:textStyle="bold"
                android:layout_marginStart="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/ivCaution"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:id="@+id/pfHome">
        <include layout="@layout/progress_frame"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>